--- a/gadpadebateapp/src/css/Home.css
+++ b/gadpadebateapp/src/css/Home.css
@@ -66,6 +66,10 @@ section {
     min-height: 100vh;
 }
 
+.hero-section {
+    min-height: 150vh;
+}
+
 /* ==================================== /
 / === Title Section === /
 / ==================================== */
