--- a/gadpadebateapp/src/css/Theme.css
+++ b/gadpadebateapp/src/css/Theme.css
@@ -36,7 +36,6 @@ body,
     padding: 0;
     height: 100%;
     color: #f5f5f5;
-    font-family: "Verdana", sans-serif;
 }
 
 h1,
@@ -53,7 +52,6 @@ p {
 
 body {
     margin: 0;
-    padding-top: 100px;
 }
 
 /* === Forms === */
